--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.2.5",
+    "jest-cucumber": "^3.0.1",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
@@ -55,10 +56,20 @@
     "moduleFileExtensions": [
       "js",
       "json",
-      "ts"
+      "ts",
+      "feature"
     ],
-    "rootDir": "src",
-    "testRegex": ".*\\.spec\\.ts$",
+    "rootDir": ".",
+    "moduleNameMapper": {
+      "@core/(.*)$": "<rootDir>/src/core/$1",
+      "@infrastructure/(.*)$": "<rootDir>/src/infrastructure/$1",
+      "@application/(.*)$": "<rootDir>/src/application/$1",
+      "@test/(.*)$": "<rootDir>/test/$1"
+    },
+    "testMatch": [
+      "<rootDir>/test/bdd-functional/tests/**/*.steps.ts",
+      "<rootDir>/test/unit/**/*.spec.ts"
+    ],
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
     },
@@ -67,5 +78,10 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "_moduleAliases": {
+    "@core": "core",
+    "@infrastructure": "infrastructure",
+    "@application": "application"
   }
 }
