--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
@@ -43,6 +45,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.2.5",
     "jest-cucumber": "^3.0.1",
+    "module-alias": "^2.2.2",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
@@ -80,8 +83,8 @@
     "testEnvironment": "node"
   },
   "_moduleAliases": {
-    "@core": "core",
-    "@infrastructure": "infrastructure",
-    "@application": "application"
+    "@core": "src/core",
+    "@infrastructure": "src/infrastructure",
+    "@application": "src/application"
   }
 }
