--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "class-validator": "^0.13.1",
     "dotenv": "^10.0.0",
     "env-var": "^7.1.1",
-    "nest-neo4j": "^0.1.4",
+    "moment": "^2.29.1",
+    "neo4j-driver": "^4.4.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
