--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "socket.io": "^4.4.0",
+    "socketio-jwt": "^4.6.2",
     "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
