--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/platform-socket.io": "^8.2.3",
     "@nestjs/swagger": "^5.1.4",
+    "@nestjs/throttler": "^2.0.0",
     "@nestjs/websockets": "^8.2.3",
     "bcryptjs": "^2.4.3",
     "chalk": "^4.1.2",
