--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "rxjs": "^7.2.0",
     "socket.io": "^4.4.0",
     "socketio-jwt": "^4.6.2",
+    "stripe": "^8.197.0",
     "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
