--- a/package.json
+++ b/package.json
@@ -41,9 +41,11 @@
     "helmet": "^5.0.0",
     "moment": "^2.29.1",
     "neo4j-driver": "^4.4.0",
+    "otplib": "^12.0.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "qrcode": "^1.5.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
