--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "test:e2e": "jest --config test/end-to-end/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/axios": "^0.0.5",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.1.0",
     "@nestjs/core": "^8.0.0",
@@ -53,8 +52,7 @@
     "socket.io": "^4.4.0",
     "socketio-jwt": "^4.6.2",
     "stripe": "^8.197.0",
-    "swagger-ui-express": "^4.1.6",
-    "module-alias": "^2.2.2"
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
@@ -75,6 +73,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.2.5",
     "jest-cucumber": "^3.0.1",
+    "module-alias": "^2.2.2",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
