--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "test:e2e": "jest --config test/end-to-end/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^1.6.1",
+    "@nestjs/axios": "^0.0.5",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.1.0",
     "@nestjs/core": "^8.0.0",
@@ -41,6 +43,7 @@
     "helmet": "^5.0.0",
     "moment": "^2.29.1",
     "neo4j-driver": "^4.4.0",
+    "nodemailer": "^6.7.2",
     "otplib": "^12.0.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
