--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "jest --config test/end-to-end/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/axios": "^0.0.5",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.1.0",
     "@nestjs/core": "^8.0.0",
@@ -39,6 +40,7 @@
     "dotenv": "^10.0.0",
     "env-var": "^7.1.1",
     "helmet": "^5.0.0",
+    "module-alias": "^2.2.2",
     "moment": "^2.29.1",
     "neo4j-driver": "^4.4.0",
     "otplib": "^12.0.1",
@@ -73,7 +75,6 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.2.5",
     "jest-cucumber": "^3.0.1",
-    "module-alias": "^2.2.2",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
